<resources>
    <string name="app_name">分享生活</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_enterMain">进入</string>
    <string name="tx_wantogo">想去</string>
    <string name="hadgo">去过</string>
    <string name="tx_comment">评论</string>
    <string name="user_name_defual">瞄瞄</string>
    <string name="tab_appoinment"><a href="">最多人想去</a></string>
    <string name="defaul_share_text">南坛公园，松锅的约会圣地，推荐你们去哟！</string>
    <string name="huizhou">惠州</string>
    <string name="title">标题</string>
    <string name="discover">发 现</string>
    <string name="rank">排行榜</string>
    <string name="discount">优 惠</string>
    <string name="account">账 号</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <string name="login_text">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="find_pwd_text">重置密码</string>
    <string name="regist">注册</string>
    <string name="config">确定</string>
    <string name="cancel">取消</string>
    <string name="skin">跳过</string>
    <string name="personal_center">个人中心</string>
    <string name="config_pwd">确认密码</string>
    <string name="had_register">已有账号？</string>
    <string name="email_not_empty">用户名不能为空</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="pwd_not_equals">两次输入密码不相同</string>
    <string name="user_had_register">该手机号已经被使用</string>
    <string name="pwd_lenght_not_enough">密码长度不能小于6位</string>
    <string name="email_eror">用户名长度不少于4位</string>
    <string name="register_success">恭喜，注册成功！</string>
    <string name="user_name">用户名</string>
    <string name="txt_phone_number">手机号</string>
    <string name="account_pwd_incorrect">账号或密码不正确</string>
    <string name="login_success">登陆成功</string>
    <string name="find_pwd_success">重置密码成功</string>
    <string name="user_non_existent">用户名不存在</string>
    <string name="mobilePhone_not_equals">用户注册时预留手机号与当 \n 前验证手机号不相符</string>
    <string name="user_non_verif_monilePhome">当前用户尚未验证手机号</string>
    <string name="tag">标签</string>
    <string name="tag_manywanttogo">最多人想去</string>
    <string name="hz">惠州市</string>
    <string name="let_me_share">我来分享</string>
    <string name="share_what_hint">分享点什么呢？</string>
    <string name="share_location_info">分享位置</string>
    <string name="share">分享</string>
    <string name="send">发送</string>
    <string name="theImgNumberLimit">最多选%s张照片哟</string>
    <string name="locationing">正在定位&#8230;</string>
    <string name="sending">正在发送</string>
    <string name="upload_images_fail">上传照片失败 请稍候再试</string>
    <string name="some_images_maybe_miss">部分图片可能丢失</string>
    <string name="share_message_fail">分享失败 请稍后再试</string>
    <string name="share_messages_success">分享成功</string>
    <string name="share_messages_empty">分享的内容不能为空</string>
    <string name="reset">恢复</string>
    <string name="do_not_reset">不恢复</string>
    <string name="save_draft_success">保存草稿成功</string>
    <string name="need_to_save_draft">需要保存草稿吗？</string>
    <string name="save">保存</string>
    <string name="do_not_save">不保存</string>
    <string name="had_draft_would_reset_tips">有上一次未分享成功的信息\n要恢复吗？</string>
    <string name="user_logout">注销登陆</string>
    <string name="upload_avater">上传头像</string>
    <string name="upload_success">上传成功</string>
    <string name="star_upload_avatar">开始上传头像</string>
    <string name="reset_avatar_success">修改头像成功</string>
    <string name="reset_avatar_failure">修改头像失败\\n请稍候再试</string>
    <string name="login_tips_text">当前还没有登录哟！\n需要登录吗？</string>
    <string name="about">关于</string>
    <string name="cleaning_cache">清除中&#8230;</string>
    <string name="revise_pwd">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="save_pwd">更改</string>
    <string name="old_pwd_empty">原密码不能为空</string>
    <string name="revising">修改中&#8230;</string>
    <string name="revise_success">修改成功</string>
    <string name="revise_faile">修改失败</string>
    <string name="orin_pwd_not_math">原密码不正确</string>
    <string name="new_pwd_lenght_not_enough">新密码长度不少于6位</string>
    <string name="edit_personal_info">修改资料</string>
    <string name="nickname">昵称</string>
    <string name="qq">Q&#160;&#160;Q</string>
    <string name="mobile_phone_number">手机号码</string>
    <string name="mobile_phone_tips">*找回密码通过绑定手机号码</string>
    <string name="hometown">故乡</string>
    <string name="input_mobile_phone_number">请输入正确的手机号</string>
    <string name="input_hint_nickname">长度不少于4个字符，不多于12个字符</string>
    <string name="age">年龄</string>
    <string name="age_22">22</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="gd_hz">惠州市惠城区</string>
    <string name="nickname_empty">昵称不能不为空</string>
    <string name="nickname_lenght_short">昵称长度应不少于%s个字符</string>
    <string name="nickname_lenght_toolong">昵称长度太长\\n昵称应少于%s个字符</string>
    <string name="update_user_info_faile">更新信息失败\n请稍后再试</string>
    <string name="update_user_info_success">更新信息成功</string>
    <string name="verify_mobilePhone_faile">验证手机号码失败\\n请稍候再试！</string>
    <string name="updating">更新中...</string>
    <string name="without_network">网络不通畅\n稍后有网络才能获取最新数据</string>
    <string name="created_at">2015&#8211;11&#8211;19 11:16</string>
    <string name="personal_signature">个性签名</string>
    <string name="et_activity_edit_personal_info_signature">（推荐）签名不多于20个字符</string>
    <string name="user_info_hint_enjoy_life">爱生活，享受生活</string>
    <string name="qq_default">000000000</string>
    <string name="email_default">00000000@qq.com</string>
    <string name="tips_loading">加载中&#8230;</string>
    <string name="tips_loading_faile">加载失败，请稍候再试</string>
    <string name="tips_loading_cancel">下载已取消</string>
    <string name="no_more_messages">没有更多的信息</string>
    <string name="cancel_collect_success">去过了</string>
    <string name="collect_success">想去</string>
    <string name="not_visit">没去过</string>
    <string name="title_body">正文</string>
    <string name="txt_replay"> 回复 </string>
    <string name="txt_comment">评论</string>
    <string name="comment_not_empty">评论内容不能为空</string>
    <string name="operation_success">操作成功</string>
    <string name="network_erro">网络不通畅</string>
    <string name="user_name_defual0">二货</string>
    <string name="click_get_more"><a href="">点击查看全文</a></string>
    <string name="share_record">分享记录</string>
    <string name="collection_record">收藏记录</string>
    <string name="back_superclazz">返回</string>
    <string name="messages_center">消息列表</string>
    <string name="tips_discount_hint">*当前分享信息为商家优惠信息</string>
    <string name="txt_location_info">位置信息</string>
    <string name="location">位置</string>
    <string name="navigation">导航</string>
    <string name="find_pwd_failure">重置密码失败</string>
    <string name="hint_search_places">搜索附近位置</string>
    <string name="txt_loaction_info">所在位置</string>
    <string name="txt_exit_title">真的要退出？</string>
    <string name="txt_exit_message">你确定要离开吗?</string>
    <string name="txt_search">搜索</string>
    <string name="txt_search_nearby_place">搜索附近位置</string>
    <string name="toast_download_video_failure">下载错误，请稍候再试</string>
    <string name="toast_save_iamge_success">保存图片成功</string>
    <string name="toast_save_iamge_failure">保存图片失败，请稍候再试</string>
    <string name="txt_video_review">视频预览</string>
    <string name="toast_video_can_not_found">找不到视频!请重新录制</string>
    <string name="upload_video_fail">上传视频失败</string>
    <string name="txt_pwd_min_length">最少六位字符</string>
    <string name="txt_get_identify_code">获取验证码</string>
    <string name="toast_send_idnetify_code_success">发送验证码成功</string>
    <string name="toast_send_idnetify_code_failure">发送验证码失败！存在未知错误</string>
    <string name="txt_time">59秒</string>
    <string name="txt_verific_phone">验证手机号码</string>
    <string name="txt_re_send_identify_code">重发验证码</string>
    <string name="toast_phone_number_empty">手机号码为空</string>
    <string name="toast_phone_number_format_not_correct">手机号码格式不正确</string>
    <string name="txt_identify_code">验证码</string>
    <string name="txt_phone_formate">请填写正确的手机号码</string>
    <string name="txt_identify_code_lenght">6位验证码</string>
    <string name="html_pwd_not_equal"><![CDATA[<font color=\'white\'>两次输入密码不相符</font>]]></string>
    <string name="toast_user_not_vail">该用户不存在</string>
    <string name="toast_had_verif_phone_number">手机号已验证过</string>
    <string name="txt_video_click_exit">点击退出</string>
    <string name="toast_edit_nicke_name">请完善昵称</string>
    <string name="toast_phone_verif_failure">手机号验证失败</string>
    <string name="txt_erro_message">"服务器异常 code = "</string>
    <string name="txt_serve_erro">"服务器异常"</string>
    <string name="menu_copy">复制</string>
    <string name="menu_image_save">保存到手机中</string>
    <string name="menu_share">分享</string>
    <string name="menu_female">女</string>
    <string name="menu_male">男</string>
    <string name="txt_min_age">15</string>
    <string name="toastP_location_info_empty">位置信息不存在!</string>
    <string name="txt_tag_invisible">不显示</string>
    <string name="txt_current_city">所在城市:</string>
    <!--about start-->
    <string name="txt_current_version">当前版本:%s</string>
    <string name="txt_about_content">本应用作为作者的毕业设计，不作商业用途,保留所有权利。应用中使用Bmob作为服务后台，以及使用几个开源框架：Universal Image Loader、Volley、Crop、多图选择器，感谢GitHub开源社区的无私贡献者</string>
    <string name="txt_about_contect">联系作者：daynearby@hotmail.com</string>
    <!--about end-->
    <string name="txt_share_uploading">正在分享信息</string>
    <string name="menu_delete">删除</string>
    <string name="menu_image_share_all">分享全部图片</string>
    <string name="menu_image_share_singal">分享图片</string>
    <string name="txt_verifi_phone_first">请验证手机号</string>
    <string name="txt_check_pwd_first">请检查密码是否有效</string>
    <string name="txt_default">N/A</string>


    <!--bmob update-->
    <string name="bmob_common_action_info_exist">正在下载中.</string>
    <string name="bmob_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="bmob_common_action_pause">暂停</string>
    <string name="bmob_common_action_continue">继续</string>
    <string name="bmob_common_action_cancel">取消</string>
    <string name="bmob_common_download_notification_prefix">正在下载: </string>
    <string name="bmob_common_pause_notification_prefix">暂停: </string>
    <string name="bmob_common_start_download_notification">正在下载应用</string>
    <string name="bmob_common_start_patch_notification">正在更新安装包</string>
    <string name="bmob_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="bmob_common_download_failed">下载失败</string>
    <string name="bmob_common_download_finish">下载完成，请点击安装</string>
    <string name="bmob_common_patch_finish">更新完成，请点击安装</string>
    <string name="bmob_common_silent_download_finish">新版本已经准备好，请点击安装</string>

    <string name="BMBreak_Network">未联网</string>
    <string name="BMUpdateTitle">发现新版本</string>
    <string name="BMNewVersion">最新版本: </string>
    <string name="BMUpdateContent">更新内容</string>
    <string name="BMUpdateSize">仅需要下载:</string>
    <string name="BMTargetSize">新版本大小:</string>
    <string name="BMGprsCondition">（提示：非WIFI环境）</string>
    <string name="BMUpdateNow">立即更新</string>
    <string name="BMAppUpdate">应用更新</string>
    <string name="BMNotNow">以后再说</string>
    <string name="BMIgnore">忽略该版</string>
    <string name="BMToast_IsUpdating">正在更新中....</string>
    <string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="BMUpdateCheck">v3.1.4Beta</string>
    <string name="txt_video">小视频</string>
    <string name="txt_wantto_go">我想去</string>
    <string name="toast_start_download_iamge">开始下载...</string>
    <!--end-->
</resources>
