<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/paddingMediu">

    <TextView
        android:id="@+id/tv_record_comm_nickname"
        style="@style/text_style_match"
        android:text="@string/user_name_defual"
        android:textSize="@dimen/textSizeMediu" />

    <TextView
        android:id="@+id/tv_record_comm_content"
        style="@style/text_style_match"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/defaul_share_text" />

    <TextView
        style="@style/text_style_match"
        android:gravity="center"
        android:text="@string/click_get_more" />

    <TextView
        android:id="@+id/tv_record_comm_created"
        style="@style/text_style_match"
        android:gravity="right"
        android:text="@string/created_at" />

</LinearLayout>