<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingMic"
        android:paddingRight="@dimen/paddingMic"
        android:paddingTop="@dimen/paddingMic">

        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:text="@string/nickname"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSizeMediu" />

            <EditText
                android:id="@+id/et_edit_personal_nickname"
                style="@style/bar_text"
                android:layout_weight="1"
                android:inputType="text"
                android:padding="@dimen/paddingMic"
                android:singleLine="true"
                android:textSize="@dimen/textSizeMediu"
                />
        </LinearLayout>



        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/age"
                android:textSize="@dimen/textSizeMediu"
                android:textColor="@android:color/black" />

            <TextView

                android:id="@+id/popupwin_edit_personnal_info_age"
                style="@style/text_style_match"
                android:layout_weight="1"
                android:drawableRight="@drawable/icon_drop_down_def"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/age_22"
                android:textSize="@dimen/textSizeMediu" />


            <TextView
                style="@style/text_style_match"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/gender"
                android:textSize="@dimen/textSizeMediu" />

            <TextView
                android:id="@+id/popupwin_edit_personnal_info_gender"
                style="@style/text_style_match"
                android:layout_weight="1"
                android:drawableRight="@drawable/icon_drop_down_def"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/male"
                android:textSize="@dimen/textSizeMediu" />
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/qq"
                android:textSize="@dimen/textSizeMediu" />

            <EditText
                android:id="@+id/et_edit_personal_qq"
                style="@style/bar_text"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/paddingMic"
                android:singleLine="true"
                android:textSize="@dimen/textSizeMediu" />
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/email"
                android:textSize="@dimen/textSizeMediu" />

            <EditText
                android:id="@+id/et_edit_personal_email"
                style="@style/bar_text"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:padding="@dimen/paddingMic"
                android:singleLine="true"
                android:textSize="@dimen/textSizeMediu" />
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:text="@string/mobile_phone_number"
                android:textSize="@dimen/textSizeMediu" />

            <EditText
                android:id="@+id/et_edit_personal_mobile_phone_number"
                style="@style/bar_text"
                android:layout_weight="1"
                android:hint="@string/input_mobile_phone_number"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/textSizeMediu" />
        </LinearLayout>

        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:text="@string/hometown"
                android:textSize="@dimen/textSizeMediu"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/popupwin_edit_personnal_info_hometown"
                style="@style/text_style_match"
                android:layout_weight="1"
                android:drawableRight="@drawable/icon_drop_down_def"
                android:gravity="center_horizontal"
                android:text="@string/hz"
                android:textSize="@dimen/textSizeMediu"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linearLayout_h"
            android:layout_marginTop="@dimen/paddingMediu">

            <TextView
                style="@style/text_style_match"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:text="@string/personal_signature"
                android:textSize="@dimen/textSizeMediu"
                android:textColor="@android:color/black"/>

            <EditText
                style="@style/bar_text"
                android:layout_weight="1"
                android:hint="@string/et_activity_edit_personal_info_signature"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/textSizeMediu" />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:id="@+id/confirm_pwd_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save_pwd"
        android:textColor="@android:color/black"
        android:background="@drawable/sele_button"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>