<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical"
        android:padding="@dimen/paddingMediu"

        >

        <TextView
            style="@style/bar_text"
            android:gravity="center"
            android:padding="@dimen/paddingMediu"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeXLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/paddingMediu">

            <TextView
                style="@style/text_tab"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeLarge" />

            <EditText
                style="@style/bar_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textSizeLarge"
                android:singleLine="true"
                android:paddingLeft="@dimen/paddingMediu" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/paddingMediu">

            <TextView
                style="@style/text_tab"
                android:text="@string/pwd"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeLarge" />

            <EditText
                style="@style/bar_text"
                android:singleLine="true"
                android:textSize="@dimen/textSizeLarge"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            style="@style/bar_text"
            android:gravity="right"
            android:padding="@dimen/paddingMic"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMediu" />

        <TextView
            style="@style/bar_text"
            android:gravity="right"
            android:padding="@dimen/paddingMic"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMediu" />


        <TextView
            style="@style/bar_text"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:padding="@dimen/paddingMediu"
            android:textSize="@dimen/textSizeLarge"
            android:layout_marginLeft="@dimen/paddingLarg"
            android:layout_marginRight="@dimen/paddingLarg"
            android:background="@drawable/sele_login_btn"/>
    </LinearLayout>
</RelativeLayout>