<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text_disabled_material_light"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:divider="@drawable/divier_vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tx_wantogo"
            android:drawableLeft="@drawable/wantogo_30"
            android:text="@string/tx_wantogo"
            style="@style/text_style" />
        <TextView
           android:id="@+id/hadgo"
            style="@style/text_style"
            android:drawableLeft="@drawable/hadgo_30"
            android:text="@string/hadgo"/>
        <TextView
            android:id="@+id/tx_comment"
            android:text="@string/tx_comment"
            android:drawableLeft="@drawable/comment_30"
            style="@style/text_style"/>


    </LinearLayout>

</LinearLayout>